syntax = "proto3";
package aequitas.justice.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/CreoDAMO/REPAR/aequitas/x/justice/types";

// JusticeBurn represents the core deflationary mechanism
// When defendants pay: $1 USD = 1 REPAR burned permanently
message JusticeBurn {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;

  string id = 1;
  string defendant_id = 2;
  string amount_burned = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string usd_equivalent = 4 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  int64 timestamp = 5;
  int64 block_height = 6;
  string tx_hash = 7;
  string evidence_cid = 8; // IPFS proof of payment
}

// BurnStatistics tracks total burns
message BurnStatistics {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;

  string total_burned = 1 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string total_usd_value = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string current_supply = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string initial_supply = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  int64 total_burns = 5;
  int64 last_burn_timestamp = 6;
}
